[tool.poetry]
name = "video-marker"
version = "0.1.0"
description = ""
authors = ["Germey <cqc@cuiqingcai.com>"]

[tool.poetry.dependencies]
python = "^3.7"
environs = "^9.3.5"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
